--- a/Conference.html
+++ b/Conference.html
@@ -5,6 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Конференція</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        nav ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            gap: 15px;
+            background-color: #333;
+            padding: 10px;
+            justify-content: center;
+        }
+
+        nav ul li {
+            display: inline;
+        }
+
+        nav ul li a {
+            text-decoration: none;
+            padding: 10px 15px;
+            display: block;
+            color: white;
+            font-weight: bold;
+        }
+
+        nav ul li a:hover {
+            background-color: #555;
+        }
+
+        footer {
+            text-align: center;
+            margin-top: 20px;
+            padding: 10px;
+            background-color: #333;
+            color: white;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -17,13 +53,12 @@
                 <li><a href="schedule.html">Розклад</a></li>
                 <li><a href="speakers.html">Спікери</a></li>
                 <li><a href="contacts.html">Контакти</a></li>
-                
             </ul>
         </nav>
     </header>
     
     <footer>
-        <p>Чудно</p>
+        <p>&copy; 2025 Конференція. Усі права захищено.</p>
     </footer>
 </body>
 </html>
