--- a/contacts.html
+++ b/contacts.html
@@ -4,12 +4,53 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Контакти</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f4f4;
+    }
+
+    header {
+      background-color: #333;
+      color: white;
+      padding: 15px;
+      text-align: center;
+    }
+
+    header a {
+      color: white;
+      text-decoration: none;
+    }
+
+    section {
+      padding: 20px;
+      margin-top: 20px;
+    }
+
+    h1 {
+      color: #333;
+    }
+
+    p {
+      font-size: 16px;
+    }
+
+    footer {
+      text-align: center;
+      margin-top: 20px;
+      padding: 10px;
+      background-color: #333;
+      color: white;
+    }
+  </style>
 </head>
 <body>
   <header>
     <div>
       <p>Телефон: <a href="tel:+380123456789">+38 012 345 67 89</a></p>
-      <p>Електронна пошта: <a href="denisremix2006@gmail.com">info@example.com</a></p>
+      <p>Електронна пошта: <a href="mailto:info@example.com">info@example.com</a></p>
     </div>
   </header>
 
@@ -17,5 +58,6 @@
     <h1>Зв'яжіться з нами</h1>
     <p>Для запитів або пропозицій, будь ласка, використовуйте контактні дані вище.</p>
   </section>
+
 </body>
 </html>
