--- a/services.html
+++ b/services.html
@@ -4,11 +4,92 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Послуги конференції</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+
+        header {
+            background-color: #333;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+
+        header nav ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+        }
+
+        header nav ul li {
+            display: inline;
+        }
+
+        header nav ul li a {
+            text-decoration: none;
+            color: white;
+            padding: 10px;
+            font-weight: bold;
+        }
+
+        header nav ul li a:hover {
+            background-color: #555;
+        }
+
+        main {
+            padding: 20px;
+        }
+
+        h1, h2 {
+            color: #333;
+        }
+
+        .services, .extra-services {
+            margin-bottom: 40px;
+        }
+
+        ul {
+            list-style-type: disc;
+            margin-left: 20px;
+        }
+
+        ul li {
+            padding: 5px 0;
+        }
+
+        footer {
+            text-align: center;
+            margin-top: 20px;
+            padding: 10px;
+            background-color: #333;
+            color: white;
+        }
+    </style>
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Домашня</a></li>
+                <li><a href="about.html">Про нас</a></li>
+                <li><a href="services.html">Послуги</a></li>
+                <li><a href="portfolio.html">Портфоліо</a></li>
+                <li><a href="schedule.html">Розклад</a></li>
+                <li><a href="speakers.html">Спікери</a></li>
+                <li><a href="contacts.html">Контакти</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <main>
-        <section>
+        <section class="services">
             <h1>Послуги конференції</h1>
             <p>Наш захід пропонує широкий спектр послуг для учасників та організаторів.</p>
             <ul>
@@ -24,7 +105,7 @@
             </ul>
         </section>
         
-        <section>
+        <section class="extra-services">
             <h2>Додаткові сервіси</h2>
             <p>Ми також надаємо додаткові можливості для зручності учасників:</p>
             <ul>
@@ -36,8 +117,5 @@
         </section>
     </main>
     
-    <footer>
-        <p>&copy;Конференція 2025. Усі права захищено.</p>
-    </footer>
 </body>
 </html>
