Гарна початкова сторінка

--- a/contacts.html
+++ b/contacts.html
@@ -4,47 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Контакти</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f4f4f4;
-    }
-
-    header {
-      background-color: #333;
-      color: white;
-      padding: 15px;
-      text-align: center;
-    }
-
-    header a {
-      color: white;
-      text-decoration: none;
-    }
-
-    section {
-      padding: 20px;
-      margin-top: 20px;
-    }
-
-    h1 {
-      color: #333;
-    }
-
-    p {
-      font-size: 16px;
-    }
-
-    footer {
-      text-align: center;
-      margin-top: 20px;
-      padding: 10px;
-      background-color: #333;
-      color: white;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
@@ -58,6 +18,5 @@
     <h1>Зв'яжіться з нами</h1>
     <p>Для запитів або пропозицій, будь ласка, використовуйте контактні дані вище.</p>
   </section>
-
 </body>
 </html>
