--- a/portfolio.html
+++ b/portfolio.html
@@ -4,60 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Моє Портфоліо</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f4f4f4;
-    }
-
-    header {
-      background-color: #333;
-      color: white;
-      padding: 20px;
-      text-align: center;
-    }
-
-    header h1 {
-      margin: 0;
-    }
-
-    header p {
-      font-size: 18px;
-    }
-
-    section {
-      padding: 20px;
-      margin-top: 20px;
-    }
-
-    h2, h3 {
-      color: #333;
-    }
-
-    .highlight {
-      font-weight: bold;
-      color: #0066cc;
-    }
-
-    ul {
-      list-style-type: none;
-      padding-left: 0;
-    }
-
-    ul li {
-      padding: 5px 0;
-    }
-
-    footer {
-      text-align: center;
-      margin-top: 20px;
-      padding: 10px;
-      background-color: #333;
-      color: white;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
@@ -91,6 +38,5 @@
       <li><strong>Проект 3:</strong> Веб-сайт для малого бізнесу, що працює на HTML, CSS та JavaScript.</li>
     </ul>
   </section>
-
 </body>
 </html>
