--- a/services.html
+++ b/services.html
@@ -4,74 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Послуги конференції</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-
-        header {
-            background-color: #333;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-
-        header nav ul {
-            list-style-type: none;
-            padding: 0;
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-        }
-
-        header nav ul li {
-            display: inline;
-        }
-
-        header nav ul li a {
-            text-decoration: none;
-            color: white;
-            padding: 10px;
-            font-weight: bold;
-        }
-
-        header nav ul li a:hover {
-            background-color: #555;
-        }
-
-        main {
-            padding: 20px;
-        }
-
-        h1, h2 {
-            color: #333;
-        }
-
-        .services, .extra-services {
-            margin-bottom: 40px;
-        }
-
-        ul {
-            list-style-type: disc;
-            margin-left: 20px;
-        }
-
-        ul li {
-            padding: 5px 0;
-        }
-
-        footer {
-            text-align: center;
-            margin-top: 20px;
-            padding: 10px;
-            background-color: #333;
-            color: white;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -116,6 +49,9 @@
             </ul>
         </section>
     </main>
-    
+
+    <footer>
+        <p>&copy; 2025 Конференція. Усі права захищено.</p>
+    </footer>
 </body>
 </html>
