--- a/about.html
+++ b/about.html
@@ -3,49 +3,112 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Про нас</title>
+    <title>Про нас - КонфЕвент</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body class="about-page">
+<body>
     <header>
+        <div class="logo">
+            <h1>КонфЕвент</h1>
+        </div>
         <nav>
             <ul>
                 <li><a href="index.html">Домашня</a></li>
-                <li><a href="about.html">Про нас</a></li>
+                <li><a href="about.html" class="active">Про нас</a></li>
                 <li><a href="services.html">Послуги</a></li>
                 <li><a href="portfolio.html">Портфоліо</a></li>
-                <li><a href="schedule.html">Розклад</a></li>
-                <li><a href="speakers.html">Спікери</a></li>
                 <li><a href="contacts.html">Контакти</a></li>
             </ul>
         </nav>
     </header>
 
-    <main>
-        <section class="about-us">
-            <h1>Наші Співробітники</h1>
-            <div class="team">
-                <div class="team-member">
-                    <img src="images/people1.png" alt="Іван Петренко" class="team-photo">
-                    <h3>Іван Петренко</h3>
-                    <p><strong>Хобі:</strong> Програмування, читання, подорожі</p>
-                    <p><strong>Освіта:</strong> Київський національний університет, факультет комп'ютерних наук</p>
-                </div>
-                <div class="team-member">
-                    <img src="images/people2.png" alt="Григорій Сковорода" class="team-photo">
-                    <h3>Григорій Сковорода</h3>
-                    <p><strong>Хобі:</strong> Спорт, йога, фотографія</p>
-                    <p><strong>Освіта:</strong> Львівська політехніка, факультет дизайну</p>
-                </div>
-                <div class="team-member">
-                    <img src="images/people3.png" alt="Олександр Ковальчук" class="team-photo">
-                    <h3>Олександр Ковальчук</h3>
-                    <p><strong>Хобі:</strong> Музика, кіно, техніка</p>
-                    <p><strong>Освіта:</strong> Харківський національний університет, факультет фізики</p>
+    <section class="page-banner">
+        <h2>Про нас</h2>
+    </section>
+
+    <section class="about-content">
+        <div class="about-text">
+            <h2>Наша історія</h2>
+            <p>КонфЕвент був заснований у 2020 році групою ентузіастів, які прагнули створити платформу для обміну знаннями та досвідом між професіоналами різних галузей.</p>
+            <p>За 5 років ми організували понад 50 успішних конференцій та подій, які відвідали більше 10 000 учасників.</p>
+            <p>Наша місія - створювати якісні події, які допомагають людям розвиватися професійно та знаходити нові можливості для співпраці.</p>
+        </div>
+        <div class="about-image">
+            <img src="https://via.placeholder.com/400x300" alt="Команда КонфЕвент">
+        </div>
+    </section>
+
+    <section class="team">
+        <h2>Наша команда</h2>
+        <div class="team-container">
+            <div class="team-member">
+                <img src="https://via.placeholder.com/200x200" alt="Андрій Ковальчук">
+                <h3>Андрій Ковальчук</h3>
+                <p class="position">Засновник і CEO</p>
+                <p>Має 10+ років досвіду в організації подій</p>
+            </div>
+            <div class="team-member">
+                <img src="https://via.placeholder.com/200x200" alt="Наталія Шевченко">
+                <h3>Наталія Шевченко</h3>
+                <p class="position">Менеджер проектів</p>
+                <p>Відповідає за планування та координацію подій</p>
+            </div>
+            <div class="team-member">
+                <img src="https://via.placeholder.com/200x200" alt="Сергій Мельник">
+                <h3>Сергій Мельник</h3>
+                <p class="position">Маркетинг-директор</p>
+                <p>Розробляє стратегії просування подій</p>
+            </div>
+            <div class="team-member">
+                <img src="https://via.placeholder.com/200x200" alt="Ольга Лисенко">
+                <h3>Ольга Лисенко</h3>
+                <p class="position">Координатор спікерів</p>
+                <p>Працює зі спікерами та формує програму</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="values">
+        <h2>Наші цінності</h2>
+        <div class="values-container">
+            <div class="value-item">
+                <h3>Якість</h3>
+                <p>Ми прагнемо створювати події найвищої якості, приділяючи увагу кожній деталі.</p>
+            </div>
+            <div class="value-item">
+                <h3>Інновації</h3>
+                <p>Ми постійно шукаємо нові формати та підходи до організації подій.</p>
+            </div>
+            <div class="value-item">
+                <h3>Спільнота</h3>
+                <p>Ми будуємо спільноту професіоналів, які діляться знаннями та досвідом.</p>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>КонфЕвент</h3>
+                <p>Організація конференцій та подій для професіоналів</p>
+            </div>
+            <div class="footer-section">
+                <h3>Контакти</h3>
+                <p>Email: info@confevent.ua</p>
+                <p>Телефон: +380 44 123 4567</p>
+            </div>
+            <div class="footer-section">
+                <h3>Слідкуйте за нами</h3>
+                <div class="social-links">
+                    <a href="#" class="social-link">Facebook</a>
+                    <a href="#" class="social-link">Twitter</a>
+                    <a href="#" class="social-link">Instagram</a>
                 </div>
             </div>
-        </section>
-    </main>
-
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2025 КонфЕвент. Усі права захищені.</p>
+        </div>
+    </footer>
 </body>
 </html>
